[metadata]
name = zonic
keywords = zonic, port-scanner, network
version = 0.1.6
url = https://github.com/symonk/zonic
author = Simon Kerr
author_email = jackofspaces@gmail.com
maintainer = Simon Kerr
maintainer_email = jackofspaces@gmail.com
description = Extendable python port scanner
long_description = TODO
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers, Penetration Testers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
install_requires = requirements
license = MIT license
platforms = unix, linux, osx, cygwin, win32

[options]
packages = zonic
include_package_data = True
python_requires = >3.8
setup_requires =
    setuptools>=>=42.0
    setuptools-scm>=3.4
install_requires =
    colorama
    pluggy
    halo
zip_safe = no

[options.extras_require]
testing =
    assertpy==1.1
    coverage==5.3.1
    coverage==5.3.1
    pip==20.3.3
    pytest==6.2.1
    pytest-cov==2.10.1
    pytest-httpserver==0.3.6
    Sphinx==3.4.3
    sphinx_rtd_theme==0.5.1
    tox==3.21.1
    twine==3.3.0
    watchdog==1.0.2
    wheel==0.36.2
    pre-commit==2.9.3

[options.entry_points]
console_scripts = zonic=zonic.main:main


[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 120


[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
